# Random_Number_Generator

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_zh.md
src/: controls.c  controls.h  main.c  output.c  output.h  random.c  random.h  stats.c  stats.h  term.c  term.h  tui.c  tui.h
src/graph/: graph.c  graph.h  graph_bernoulli.c  graph_bernoulli.h  graph_normal.c  graph_normal.h  graph_poisson.c  graph_poisson.h  graph_uniform.c  graph_uniform.h
test/: test.sh
